MWUASSIGNT-4 : Implementation of IAdminUserListProvider for current user

--- a/src/java/fr/paris/lutece/plugins/workflow/modules/userassignment/resources/userassignment_messages_fr.properties
+++ b/src/java/fr/paris/lutece/plugins/workflow/modules/userassignment/resources/userassignment_messages_fr.properties
@@ -2,3 +2,4 @@
 module.provider=Mairie de Paris
 module.description=Lutece Module wf User assigment
 
+task.user.assign.config.self=Utilisateur Courant
