--- a/src/java/fr/paris/lutece/plugins/workflow/modules/userassignment/resources/userassignment_messages_en.properties
+++ b/src/java/fr/paris/lutece/plugins/workflow/modules/userassignment/resources/userassignment_messages_en.properties
@@ -3,3 +3,8 @@ module.provider=Mairie de Paris
 module.description=Lutece Module wf User assigment
 
 task.user.assign.config.self=Current User
+task.user.assign.config.title=Configuration
+task.user.assign.config.user.choice=User Choice
+task.user.assign.title=(Userassignment) Assign a response
+task.user.labelUserSelection=Assign to:
+task.user.noUnitSelection=No assignment available.
