--- a/src/java/fr/paris/lutece/plugins/workflow/modules/userassignment/resources/userassignment_messages_fr.properties
+++ b/src/java/fr/paris/lutece/plugins/workflow/modules/userassignment/resources/userassignment_messages_fr.properties
@@ -3,3 +3,8 @@ module.provider=Mairie de Paris
 module.description=Lutece Module wf User assigment
 
 task.user.assign.config.self=Utilisateur Courant
+task.user.assign.config.title=Configuration
+task.user.assign.config.user.choice=Choix de l'utilisateur
+task.user.assign.title=(Userassignment) Assigner une r\u00e9ponse
+task.user.labelUserSelection=Assigner \u00e0:
+task.user.noUnitSelection=Pas d'assignation possible.
