--- a/src/java/fr/paris/lutece/plugins/workflow/modules/userassignment/resources/userassignment_messages_en.properties
+++ b/src/java/fr/paris/lutece/plugins/workflow/modules/userassignment/resources/userassignment_messages_en.properties
@@ -1,4 +1,4 @@
 # Plugin's keys
-plugin.provider=Mairie de Paris
-plugin.description=Lutece Module wf User assigment
+module.provider=Mairie de Paris
+module.description=Lutece Module wf User assigment
 
