MWUASSIGNT-4 : Save and display task information

--- a/src/java/fr/paris/lutece/plugins/workflow/modules/userassignment/resources/userassignment_messages_fr.properties
+++ b/src/java/fr/paris/lutece/plugins/workflow/modules/userassignment/resources/userassignment_messages_fr.properties
@@ -8,3 +8,4 @@ task.user.assign.config.user.choice=Choix de l'utilisateur
 task.user.assign.title=(Userassignment) Assigner une r\u00e9ponse
 task.user.labelUserSelection=Assigner \u00e0:
 task.user.noUnitSelection=Pas d'assignation possible.
+task.user.assign.information.description=Assignation de la ressource
