--- a/src/java/fr/paris/lutece/plugins/workflow/modules/userassignment/resources/userassignment_messages_en.properties
+++ b/src/java/fr/paris/lutece/plugins/workflow/modules/userassignment/resources/userassignment_messages_en.properties
@@ -8,3 +8,4 @@ task.user.assign.config.user.choice=User Choice
 task.user.assign.title=(Userassignment) Assign a response
 task.user.labelUserSelection=Assign to:
 task.user.noUnitSelection=No assignment available.
+task.user.assign.information.description=Resource assignment
