MWUASSIGNT-6 : Create Unassign Task

--- a/src/java/fr/paris/lutece/plugins/workflow/modules/userassignment/resources/userassignment_messages_en.properties
+++ b/src/java/fr/paris/lutece/plugins/workflow/modules/userassignment/resources/userassignment_messages_en.properties
@@ -6,6 +6,9 @@ task.user.assign.config.self=Current User
 task.user.assign.config.title=Configuration
 task.user.assign.config.user.choice=User Choice
 task.user.assign.title=(Userassignment) Assign a response
+task.user.unassign.title=(Userassignment) Unassign a response
 task.user.labelUserSelection=Assign to:
+task.user.labelUnassignUserSelection=Unassign:
 task.user.noUnitSelection=No assignment available.
 task.user.assign.information.description=Resource assignment
+task.user.unassign.information.description=Resource unassigned by
