--- a/src/java/fr/paris/lutece/plugins/workflow/modules/userassignment/resources/userassignment_messages_fr.properties
+++ b/src/java/fr/paris/lutece/plugins/workflow/modules/userassignment/resources/userassignment_messages_fr.properties
@@ -6,6 +6,9 @@ task.user.assign.config.self=Utilisateur Courant
 task.user.assign.config.title=Configuration
 task.user.assign.config.user.choice=Choix de l'utilisateur
 task.user.assign.title=(Userassignment) Assigner une r\u00e9ponse
+task.user.unassign.title=(Userassignment) D\u00e9sassigner une r\u00e9ponse
 task.user.labelUserSelection=Assigner \u00e0:
+task.user.labelUnassignUserSelection=D\u00e9sassigner:
 task.user.noUnitSelection=Pas d'assignation possible.
 task.user.assign.information.description=Assignation de la ressource
+task.user.unassign.information.description=D\u00e9sassignation de la ressource par
