MWUASSIGNT-10 : Create prerequisites based on whether or not an user is assigned

--- a/src/java/fr/paris/lutece/plugins/workflow/modules/userassignment/resources/userassignment_messages_en.properties
+++ b/src/java/fr/paris/lutece/plugins/workflow/modules/userassignment/resources/userassignment_messages_en.properties
@@ -12,3 +12,7 @@ task.user.labelUnassignUserSelection=Unassign:
 task.user.noUnitSelection=No assignment available.
 task.user.assign.information.description=Resource assignment
 task.user.unassign.information.description=Resource unassigned by
+
+# Prerequisite
+prerequisite.nouser.title=No user assigned
+prerequisite.user.title=User assigned
