--- a/src/java/fr/paris/lutece/plugins/workflow/modules/userassignment/resources/userassignment_messages_fr.properties
+++ b/src/java/fr/paris/lutece/plugins/workflow/modules/userassignment/resources/userassignment_messages_fr.properties
@@ -12,3 +12,7 @@ task.user.labelUnassignUserSelection=D\u00e9sassigner:
 task.user.noUnitSelection=Pas d'assignation possible.
 task.user.assign.information.description=Assignation de la ressource
 task.user.unassign.information.description=D\u00e9sassignation de la ressource par
+
+# Prerequisite
+prerequisite.nouser.title=Pas d'utilisateur assign\u00e9
+prerequisite.user.title=Utilisateur assign\u00e9
