MWUASSIGNT-13 : Create Prerequisite: User assigned to Resource

--- a/src/java/fr/paris/lutece/plugins/workflow/modules/userassignment/resources/userassignment_messages_en.properties
+++ b/src/java/fr/paris/lutece/plugins/workflow/modules/userassignment/resources/userassignment_messages_en.properties
@@ -16,3 +16,4 @@ task.user.unassign.information.description=Resource unassigned by
 # Prerequisite
 prerequisite.nouser.title=No user assigned
 prerequisite.user.title=User assigned
+prerequisite.user.resource.title=User assigned to resource
