--- a/src/java/fr/paris/lutece/plugins/workflow/modules/userassignment/resources/userassignment_messages_fr.properties
+++ b/src/java/fr/paris/lutece/plugins/workflow/modules/userassignment/resources/userassignment_messages_fr.properties
@@ -16,3 +16,4 @@ task.user.unassign.information.description=D\u00e9sassignation de la ressource p
 # Prerequisite
 prerequisite.nouser.title=Pas d'utilisateur assign\u00e9
 prerequisite.user.title=Utilisateur assign\u00e9
+prerequisite.user.resource.title=Utilisateur assign\u00e9 \u00e0 la r\u00e9ponse
