MWUASSIGNT-22 : Add an automatic unassign workflow task

--- a/src/java/fr/paris/lutece/plugins/workflow/modules/userassignment/resources/userassignment_messages_fr.properties
+++ b/src/java/fr/paris/lutece/plugins/workflow/modules/userassignment/resources/userassignment_messages_fr.properties
@@ -33,3 +33,8 @@ task_user_assignment_notification.config.labelRecipientsCc=Destinataire CC
 task_user_assignment_notification.config.labelRecipientsCcHelp=Destinataire CC
 task_user_assignment_notification.config.labelRecipientsBcc=Destinataire BCC
 task_user_assignment_notification.config.labelRecipientsBccHelp=Destinataire BCC
+task_user_assignment_notification.config.labelSubject=Sujet
+task_user_assignment_notification.config.labelSubjectHelp=Sujet du message 
+
+# Task Unassign User Resource Automatic
+task_unassign_user_resource_automatic.title=(Userassignment) D\u00e9sassigner une r\u00e9ponse automatiquement
