SITEMVC-243 : [BO] Ajout i18n manquant en fr

--- a/src/java/fr/paris/lutece/plugins/workflow/modules/userassignment/resources/userassignment_messages_fr.properties
+++ b/src/java/fr/paris/lutece/plugins/workflow/modules/userassignment/resources/userassignment_messages_fr.properties
@@ -19,22 +19,20 @@ prerequisite.user.title=Utilisateur assign\u00e9
 prerequisite.user.resource.title=Utilisateur assign\u00e9 \u00e0 la r\u00e9ponse
 
 # Task user assignment notification
-task_user_assignment_notification.title=(Userassignment) Notification d'assignment
-task_user_assignment_notification.config.title=Notification d'assignment
-task_user_assignment_notification.config.labelMessage=Message*
-task_user_assignment_notification.config.labelMessageHelp=Les signets 'resourceId' et 'bresourceType' sont disponibles
-task_user_assignment_notification.config.labelSubject=Sujet*
-task_user_assignment_notification.config.labelSubjectHelp=Sujet du message
-task_user_assignment_notification.config.labelSenderName=Nom de l'exp\u00e9diteur*
-task_user_assignment_notification.config.labelSenderNameHelp=Nom de l'exp\u00e9diteur
-task_user_assignment_notification.config.labelSenderEmail=Email de l'exp\u00e9diteur*
-task_user_assignment_notification.config.labelSenderEmailHelp=Email de l'exp\u00e9diteur
-task_user_assignment_notification.config.labelRecipientsCc=Destinataire CC
-task_user_assignment_notification.config.labelRecipientsCcHelp=Destinataire CC
-task_user_assignment_notification.config.labelRecipientsBcc=Destinataire BCC
-task_user_assignment_notification.config.labelRecipientsBccHelp=Destinataire BCC
+task_user_assignment_notification.title=(Userassignment) Assigner une notification
+task_user_assignment_notification.config.title=Assigner une notification
+task_user_assignment_notification.config.labelMessage=Message
+task_user_assignment_notification.config.labelMessageHelp=Les marqueurs 'resourceId' et 'resourceType' sont disponibles
 task_user_assignment_notification.config.labelSubject=Sujet
-task_user_assignment_notification.config.labelSubjectHelp=Sujet du message 
+task_user_assignment_notification.config.labelSubjectHelp=Sujet du message
+task_user_assignment_notification.config.labelSenderName=Nom de l'expéditeur
+task_user_assignment_notification.config.labelSenderNameHelp=Nom de l'expéditeur
+task_user_assignment_notification.config.labelSenderEmail=Email de l'expéditeur
+task_user_assignment_notification.config.labelSenderEmailHelp=Email de l'expéditeur
+task_user_assignment_notification.config.labelRecipientsCc=Destinataire CC
+task_user_assignment_notification.config.labelRecipientsCcHelp=Destinataire en copie (CC)
+task_user_assignment_notification.config.labelRecipientsBcc=Destinataire BCC
+task_user_assignment_notification.config.labelRecipientsBccHelp=Destinataire en copie cach\u00e9 (BCC)
 
 # Task Unassign User Resource Automatic
-task_unassign_user_resource_automatic.title=(Userassignment) D\u00e9sassigner une r\u00e9ponse automatiquement
+task_unassign_user_resource_automatic.title=(Userassignment) D\u00e9sassigner une r\u00e9ponse automaticaquement
