MWUASSIGNT-23:[BO] Added task "(Userassignment) Assign notification" in history

--- a/src/java/fr/paris/lutece/plugins/workflow/modules/userassignment/resources/userassignment_messages_fr.properties
+++ b/src/java/fr/paris/lutece/plugins/workflow/modules/userassignment/resources/userassignment_messages_fr.properties
@@ -25,14 +25,17 @@ task_user_assignment_notification.config.labelMessage=Message
 task_user_assignment_notification.config.labelMessageHelp=Les marqueurs 'resourceId' et 'resourceType' sont disponibles
 task_user_assignment_notification.config.labelSubject=Sujet
 task_user_assignment_notification.config.labelSubjectHelp=Sujet du message
-task_user_assignment_notification.config.labelSenderName=Nom de l'exp√©diteur
-task_user_assignment_notification.config.labelSenderNameHelp=Nom de l'exp√©diteur
-task_user_assignment_notification.config.labelSenderEmail=Email de l'exp√©diteur
-task_user_assignment_notification.config.labelSenderEmailHelp=Email de l'exp√©diteur
+task_user_assignment_notification.config.labelSenderName=Nom de l'exp\u00e9diteur
+task_user_assignment_notification.config.labelSenderNameHelp=Nom de l'exp\u00e9diteur
+task_user_assignment_notification.config.labelSenderEmail=Email de l'exp\u00e9diteur
+task_user_assignment_notification.config.labelSenderEmailHelp=Email de l'exp\u00e9diteur
 task_user_assignment_notification.config.labelRecipientsCc=Destinataire CC
 task_user_assignment_notification.config.labelRecipientsCcHelp=Destinataire en copie (CC)
 task_user_assignment_notification.config.labelRecipientsBcc=Destinataire BCC
 task_user_assignment_notification.config.labelRecipientsBccHelp=Destinataire en copie cach\u00e9 (BCC)
+
+task_user_assignment_notification.history.information=Une notification a ÈtÈ envoyÈe ‡ 
+task_user_assignment_notification.history.information.user_unknown=Utilisateur inconnu
 
 # Task Unassign User Resource Automatic
 task_unassign_user_resource_automatic.title=(Userassignment) D\u00e9sassigner une r\u00e9ponse automaticaquement
