--- a/src/java/fr/paris/lutece/plugins/workflow/modules/userassignment/resources/userassignment_messages_fr.properties
+++ b/src/java/fr/paris/lutece/plugins/workflow/modules/userassignment/resources/userassignment_messages_fr.properties
@@ -34,8 +34,11 @@ task_user_assignment_notification.config.labelRecipientsCcHelp=Destinataire en c
 task_user_assignment_notification.config.labelRecipientsBcc=Destinataire BCC
 task_user_assignment_notification.config.labelRecipientsBccHelp=Destinataire en copie cach\u00e9 (BCC)
 
-task_user_assignment_notification.history.information=Une notification a été envoyée à 
+task_user_assignment_notification.history.information=Une notification a ï¿½tï¿½ envoyï¿½e ï¿½ 
 task_user_assignment_notification.history.information.user_unknown=Utilisateur inconnu
 
 # Task Unassign User Resource Automatic
 task_unassign_user_resource_automatic.title=(Userassignment) D\u00e9sassigner une r\u00e9ponse automaticaquement
+
+# Markers
+markers.agent_name=Prenom de l'agent destinataire du mail
