LUT-30104 : New task to assign the current user without validation screens

--- a/src/java/fr/paris/lutece/plugins/workflow/modules/userassignment/resources/userassignment_messages_fr.properties
+++ b/src/java/fr/paris/lutece/plugins/workflow/modules/userassignment/resources/userassignment_messages_fr.properties
@@ -13,6 +13,8 @@ task.user.noUnitSelection=Pas d'assignation possible.
 task.user.assign.information.description=Assignation de la ressource
 task.user.unassign.information.description=D\u00e9sassignation de la ressource par
 
+task.currentuser.assign.title=(Userassignment) Assigner une réponse \u00e0 l'utilisateur courant
+
 # Prerequisite
 prerequisite.nouser.title=Pas d'utilisateur assign\u00e9
 prerequisite.user.title=Utilisateur assign\u00e9
